--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     <!--=============== JS ===============-->
     <script src="./assets/js/main.js"></script>
-    <script src="./assets/js/notif.js"></script>
+    <!--<script src="./assets/js/notif.js"></script>-->
 	<script src="./assets/js/app.js"></script>
 
   </body>
