--- a/profil.html
+++ b/profil.html
@@ -236,7 +236,7 @@
 							</div>
 							</section>
 							<section class="node_category card d-inline-block w-100 mb-3">
-							<div class="card-body"><h3 class="lead">Login activity</h3>
+							<div class="card-body"><h3 class="lead">Aktivitas login</h3>
 							<ul>
 								<li class="contentnode"><dl><dt>Pertama kali mengakses situs</dt><dd><script>document.write(Cookies.get('pertamaLogin'))</script></dd></dl></li>
 								<li class="contentnode"><dl><dt>Terakhir mengakses situs</dt><dd><script>document.write(Cookies.get('terakhirLogin'))</script></dd></dl></li>
