--- a/dasbor.html
+++ b/dasbor.html
@@ -129,14 +129,14 @@
 <header class="navbar">
     <nav class="navbar-inner">
         <div class="lambda-custom-menu container-fluid">
-            <a class="brand" href="."><i class="fa-solid fa-house-chimney"></i></a><button class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <a class="brand" href=""><i class="fa-solid fa-house-chimney"></i></a><button class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
             <div class="nav-collapse collapse">
                 <ul class="nav">
-					<li><a title="Dasbor" href=".">Dasbor</a></li>
+					<li><a title="Dasbor" href="">Dasbor</a></li>
 					<li><a title="Kursusku" >Kursusku</a></li><li>
                 </ul>
                 
@@ -234,7 +234,7 @@
 
 </section>
 
-  <span id="sb-3"></span><a href="https://sains1-bpti.kemdikbud.go.id/my/index.php?lang=id#sb-4" class="sr-only sr-only-focusable">Abaikan Ikhtisar kursus</a>
+  <span id="sb-3"></span><a href="" class="sr-only sr-only-focusable">Abaikan Ikhtisar kursus</a>
 
 <section id="inst5087" class=" block_myoverview block  card mb-3" role="complementary" data-block="myoverview" data-instance-id="5087" aria-labelledby="instance-5087-header">
 
@@ -617,7 +617,9 @@
 
         <div class="card-text content mt-3">
             <ul class="block_tree list" role="tree" data-ajax-loader="block_navigation/nav_loader">
-				<li class="type_unknown depth_1 contains_branch current_branch" role="treeitem" aria-expanded="true" aria-owns="random64bfad301ab4b3_group" data-collapsible="false" aria-labelledby="random64bfad301ab4b2_label_1_1" tabindex="0" aria-selected="true"><p class="tree_item branch active_tree_node navigation_node" tabindex="-1"><a tabindex="-1" id="random64bfad301ab4b2_label_1_1" href=".">Dasbor</a></p><ul id="random64bfad301ab4b3_group" role="group" tabindex="-1"><li class="type_setting depth_2 item_with_icon" role="treeitem" aria-labelledby="random64bfad301ab4b4_label_2_2" tabindex="-1" aria-selected="false"><p class="tree_item hasicon" tabindex="-1"><a tabindex="-1" id="random64bfad301ab4b4_label_2_2" href="https://sains1-bpti.kemdikbud.go.id/?redirect=0"><img class="icon navicon" alt="" aria-hidden="true" src="https://sains1-bpti.kemdikbud.go.id/theme/image.php/lambda/core/1685779320/i/home" tabindex="-1"><span class="item-content-wrap" tabindex="-1">Beranda situs</span></a></p></li>
+				<li class="type_unknown depth_1 contains_branch current_branch" role="treeitem" aria-expanded="true" aria-owns="random64bfad301ab4b3_group" data-collapsible="false" aria-labelledby="random64bfad301ab4b2_label_1_1" tabindex="0" aria-selected="true"><p class="tree_item branch active_tree_node navigation_node" tabindex="-1"><a tabindex="-1" id="random64bfad301ab4b2_label_1_1" href="">Dasbor</a></p>
+			<ul id="random64bfad301ab4b3_group" role="group" tabindex="-1">
+				<li class="type_setting depth_2 item_with_icon" role="treeitem" aria-labelledby="random64bfad301ab4b4_label_2_2" tabindex="-1" aria-selected="false"><p class="tree_item hasicon" tabindex="-1"><a tabindex="-1" id="random64bfad301ab4b4_label_2_2" href=""><img class="icon navicon" alt="" aria-hidden="true" src="https://sains1-bpti.kemdikbud.go.id/theme/image.php/lambda/core/1685779320/i/home" tabindex="-1"><span class="item-content-wrap" tabindex="-1">Beranda situs</span></a></p></li>
 				<li class="type_course depth_2 contains_branch" role="treeitem" aria-expanded="false" aria-owns="random64bfad301ab4b6_group" aria-labelledby="random64bfad301ab4b4_label_2_3" tabindex="-1" aria-selected="false"><p class="tree_item branch" tabindex="-1"><span tabindex="-1" id="random64bfad301ab4b4_label_2_3" title="CBT Kemdikbud Indonesia">Laman situs</span></p>
 			<ul id="random64bfad301ab4b6_group" role="group" aria-hidden="true" tabindex="-1">
 				<li class="type_custom depth_3 item_with_icon" role="treeitem" aria-labelledby="random64bfad301ab4b7_label_3_5" tabindex="-1" aria-selected="false"><p class="tree_item hasicon" tabindex="-1"><a tabindex="-1" id="random64bfad301ab4b7_label_3_5" href=""><img class="icon navicon" alt="" aria-hidden="true" src="https://sains1-bpti.kemdikbud.go.id/theme/image.php/lambda/core/1685779320/i/navigationitem" tabindex="-1"><span class="item-content-wrap" tabindex="-1">Kursusku</span></a></p></li>
