--- a/dasbor.html
+++ b/dasbor.html
@@ -119,7 +119,7 @@
 
         </div>
 
-</div></div><a href="./profil.html" class="d-inline-block aabtn"><span class="userinitials size-80">AA</span></a></div>
+</div></div><a onclick="window.location.replace('profil')" class="d-inline-block aabtn"><span class="userinitials size-80">AA</span></a></div>
 						</div>
 					</div>
 
