--- a/dasbor.html
+++ b/dasbor.html
@@ -195,7 +195,7 @@
                 </div>
             </div>
         </a>
-        <a class="card dashboard-card mb-1" href="./aset/pdf/tabelOSNAstronomi.pdf" title="Download DATA dan KONSTANTA" role="listitem">
+        <a class="card dashboard-card mb-1" href="./assets/pdf/tabelOSNAstronomi.pdf" title="Download DATA dan KONSTANTA" role="listitem">
             <div class="card-body p-2 m-1">
                 <div class="d-flex text-truncate">
                     <div class="d-flex align-self-center activityiconcontainer content">
@@ -385,7 +385,7 @@
 		<div class="card-deck dashboard-card-deck " data-region="card-deck" role="list">
 			<div class="card dashboard-card" role="listitem" data-region="course-content" data-course-id="7">
 				<a href="./Kursus.html" tabindex="-1">
-					<div class="card-img dashboard-card-img" style="background-image: url(&quot;./aset/img/Astronomy2.jpg&quot;);">
+					<div class="card-img dashboard-card-img" style="background-image: url(&quot;./assets/img/Astronomy2.jpg&quot;);">
 						<span class="sr-only">Gambar kursus</span>
 					</div>
 				</a>
@@ -395,7 +395,7 @@
 							<a href="./Kursus.html" class="aalink coursename mr-2 mb-1">
 								<span id="favorite-icon-7-3" data-region="favourite-icon" data-course-id="7">
 									<span class="text-primary hidden" data-region="is-favourite" aria-hidden="true">
-										<img class="icon " src="./aset/img/OSN.png" alt="Kursus bertanda bintang" title="Kursus bertanda bintang">
+										<img class="icon " src="./assets/img/OSN.png" alt="Kursus bertanda bintang" title="Kursus bertanda bintang">
 										<span class="sr-only">Kursus ditandai bintang</span>
 									</span>
 								</span>
@@ -471,7 +471,7 @@
 		
 			<div class="card dashboard-card" role="listitem" data-region="course-content" data-course-id="7">
 				<a href="./osn.html" tabindex="-1">
-					<div class="card-img dashboard-card-img" style="background-image: url(&quot;./aset/img/Astronomy.jpg&quot;);">
+					<div class="card-img dashboard-card-img" style="background-image: url(&quot;./assets/img/Astronomy.jpg&quot;);">
 						<span class="sr-only">Gambar kursus</span>
 					</div>
 				</a>
@@ -481,7 +481,7 @@
 							<a href="./osn.html" class="aalink coursename mr-2 mb-1">
 								<span id="favorite-icon-7-3" data-region="favourite-icon" data-course-id="7">
 									<span class="text-primary hidden" data-region="is-favourite" aria-hidden="true">
-										<img class="icon " src="./aset/img/OSN.png" alt="Kursus bertanda bintang" title="Kursus bertanda bintang">
+										<img class="icon " src="./assets/img/OSN.png" alt="Kursus bertanda bintang" title="Kursus bertanda bintang">
 										<span class="sr-only">Kursus ditandai bintang</span>
 									</span>
 								</span>
