--- a/dasbor.html
+++ b/dasbor.html
@@ -119,7 +119,7 @@
 
         </div>
 
-</div></div><a onclick="window.location.replace('profil')" class="d-inline-block aabtn"><span class="userinitials size-80">AA</span></a></div>
+</div></div><a onclick="window.location.replace('profil.html')" class="d-inline-block aabtn"><span class="userinitials size-80">AA</span></a></div>
 						</div>
 					</div>
 
@@ -195,7 +195,7 @@
                 </div>
             </div>
         </a>
-        <a class="card dashboard-card mb-1" href="./assets/pdf/tabelOSNAstronomi.pdf" title="Download DATA dan KONSTANTA" role="listitem">
+        <a class="card dashboard-card mb-1" href="./aset/pdf/tabelOSNAstronomi.pdf" title="Download DATA dan KONSTANTA" role="listitem">
             <div class="card-body p-2 m-1">
                 <div class="d-flex text-truncate">
                     <div class="d-flex align-self-center activityiconcontainer content">
@@ -384,18 +384,18 @@
     <div data-region="paged-content-page" data-page="1" class="">
 		<div class="card-deck dashboard-card-deck " data-region="card-deck" role="list">
 			<div class="card dashboard-card" role="listitem" data-region="course-content" data-course-id="7">
-				<a href="./Kursus.html" tabindex="-1">
-					<div class="card-img dashboard-card-img" style="background-image: url(&quot;./assets/img/Astronomy2.jpg&quot;);">
+				<a onclick="window.location.replace('kursus')" tabindex="-1">
+					<div class="card-img dashboard-card-img" style="background-image: url(&quot;./aset/img/Astronomy2.jpg&quot;);">
 						<span class="sr-only">Gambar kursus</span>
 					</div>
 				</a>
 				<div class="card-body pr-1 course-info-container" id="course-info-container-7-3">
 					<div class="d-flex align-items-start">
 						<div class="w-100 text-truncate">
-							<a href="./Kursus.html" class="aalink coursename mr-2 mb-1">
+							<a onclick="window.location.replace('kursus')" class="aalink coursename mr-2 mb-1">
 								<span id="favorite-icon-7-3" data-region="favourite-icon" data-course-id="7">
 									<span class="text-primary hidden" data-region="is-favourite" aria-hidden="true">
-										<img class="icon " src="./assets/img/OSN.png" alt="Kursus bertanda bintang" title="Kursus bertanda bintang">
+										<img class="icon " src="./aset/img/OSN.png" alt="Kursus bertanda bintang" title="Kursus bertanda bintang">
 										<span class="sr-only">Kursus ditandai bintang</span>
 									</span>
 								</span>
@@ -470,18 +470,18 @@
 			</div>
 		
 			<div class="card dashboard-card" role="listitem" data-region="course-content" data-course-id="7">
-				<a href="./osn.html" tabindex="-1">
-					<div class="card-img dashboard-card-img" style="background-image: url(&quot;./assets/img/Astronomy.jpg&quot;);">
+				<a onclick="window.location.replace('osn')" tabindex="-1">
+					<div class="card-img dashboard-card-img" style="background-image: url(&quot;./aset/img/Astronomy.jpg&quot;);">
 						<span class="sr-only">Gambar kursus</span>
 					</div>
 				</a>
 				<div class="card-body pr-1 course-info-container" id="course-info-container-7-3">
 					<div class="d-flex align-items-start">
 						<div class="w-100 text-truncate">
-							<a href="./osn.html" class="aalink coursename mr-2 mb-1">
+							<a onclick="window.location.replace('osn')" class="aalink coursename mr-2 mb-1">
 								<span id="favorite-icon-7-3" data-region="favourite-icon" data-course-id="7">
 									<span class="text-primary hidden" data-region="is-favourite" aria-hidden="true">
-										<img class="icon " src="./assets/img/OSN.png" alt="Kursus bertanda bintang" title="Kursus bertanda bintang">
+										<img class="icon " src="./aset/img/OSN.png" alt="Kursus bertanda bintang" title="Kursus bertanda bintang">
 										<span class="sr-only">Kursus ditandai bintang</span>
 									</span>
 								</span>
@@ -627,10 +627,10 @@
 				<li class="type_activity depth_3 item_with_icon" role="treeitem" aria-labelledby="random64bfad301ab4b7_label_3_8" tabindex="-1" aria-selected="false"><p class="tree_item hasicon" tabindex="-1"><a tabindex="-1" id="random64bfad301ab4b7_label_3_8" title="Forum" href="https://sains1-bpti.kemdikbud.go.id/mod/forum/view.php?id=1"><img class="icon navicon" alt="Forum" title="Forum" src="https://sains1-bpti.kemdikbud.go.id/theme/image.php/lambda/forum/1685779320/monologo" tabindex="-1"><span class="item-content-wrap" tabindex="-1">Site announcements</span></a></p></li></ul></li><li class="type_system depth_2 contains_branch" role="treeitem" aria-expanded="true" aria-owns="random64bfad301ab4b11_group" aria-labelledby="random64bfad301ab4b4_label_2_9" tabindex="-1" aria-selected="false"><p class="tree_item branch canexpand" tabindex="-1"><a tabindex="-1" id="random64bfad301ab4b4_label_2_9" >Kursusku</a></p>
 			<ul id="random64bfad301ab4b11_group" role="group" tabindex="-1">
 				<li class="type_course depth_3 contains_branch" role="treeitem" aria-expanded="false" data-requires-ajax="true" data-loaded="false" data-node-id="expandable_branch_20_7" data-node-key="7" data-node-type="20" aria-labelledby="random64bfad301ab4b12_label_3_10" tabindex="-1" aria-selected="false">
-					<p class="tree_item branch" id="expandable_branch_20_7" tabindex="-1"><a tabindex="-1" id="random64bfad301ab4b12_label_3_10" title="TO OSN Astronomi" href="./Kursus.html">TO OSN-AST<script>document.write(new Date().getFullYear().toString().substr(-2))</script></a></p>
+					<p class="tree_item branch" id="expandable_branch_20_7" tabindex="-1"><a tabindex="-1" id="random64bfad301ab4b12_label_3_10" title="TO OSN Astronomi" onclick="window.location.replace('kursus')">TO OSN-AST<script>document.write(new Date().getFullYear().toString().substr(-2))</script></a></p>
 				</li>
 				<li class="type_course depth_3 contains_branch" role="treeitem" aria-expanded="false" data-requires-ajax="true" data-loaded="false" data-node-id="expandable_branch_20_7" data-node-key="7" data-node-type="20" aria-labelledby="random64bfad301ab4b12_label_3_10" tabindex="-1" aria-selected="false">
-					<p class="tree_item branch" id="expandable_branch_20_7" tabindex="-1"><a tabindex="-1" id="random64bfad301ab4b12_label_3_10" title="OSN Astronomi" href="./osn.html">OSN-AST<script>document.write(new Date().getFullYear().toString().substr(-2))</script></a></p>
+					<p class="tree_item branch" id="expandable_branch_20_7" tabindex="-1"><a tabindex="-1" id="random64bfad301ab4b12_label_3_10" title="OSN Astronomi" onclick="window.location.replace('osn')">OSN-AST<script>document.write(new Date().getFullYear().toString().substr(-2))</script></a></p>
 				</li>
 			</ul>
 			</li></ul></li></ul>
