--- a/profil.html
+++ b/profil.html
@@ -65,43 +65,37 @@
                                 
                             <div class="caret"></div>
                         </a>
-                            <div class="dropdown-menu dropdown-menu-right menu" id="action-menu-0-menu" data-rel="menu-content" aria-labelledby="action-menu-toggle-0" role="menu">
-                                        <a href="https://sains1-bpti.kemdikbud.go.id/user/profile.php" class="dropdown-item menu-action" role="menuitem" data-title="profile,moodle" tabindex="-1" aria-labelledby="actionmenuaction-1">
+                            <div class="dropdown-menu dropdown-menu-right menu" id="action-menu-0-menu" data-rel="menu-content" aria-labelledby="action-menu-toggle-0" role="menu" style="display: none;">
+                                        <a onclick="" class="dropdown-item menu-action" role="menuitem" data-title="profile,moodle" tabindex="-1" aria-labelledby="actionmenuaction-1">
                                             <span class="menu-action-text" id="actionmenuaction-1">
-                                                Profile
+                                                Profil
                                             </span>
                                         </a>
                                         <div class="dropdown-divider" role="presentation"><span class="filler">&nbsp;</span></div>
-                                        <a href="https://sains1-bpti.kemdikbud.go.id/grade/report/overview/index.php" class="dropdown-item menu-action" role="menuitem" data-title="grades,grades" tabindex="-1" aria-labelledby="actionmenuaction-2">
+                                        <a onclick="" class="dropdown-item menu-action" role="menuitem" data-title="grades,grades" tabindex="-1" aria-labelledby="actionmenuaction-2">
                                             <span class="menu-action-text" id="actionmenuaction-2">
-                                                Grades
+                                                Nilai
                                             </span>
                                         </a>
-                                        <a href="https://sains1-bpti.kemdikbud.go.id/calendar/view.php?view=month" class="dropdown-item menu-action" role="menuitem" data-title="calendar,core_calendar" tabindex="-1" aria-labelledby="actionmenuaction-3">
+                                        <a onclick="window.location.replace('kalender')" class="dropdown-item menu-action" role="menuitem" data-title="calendar,core_calendar" tabindex="-1" aria-labelledby="actionmenuaction-3">
                                             <span class="menu-action-text" id="actionmenuaction-3">
-                                                Calendar
+                                                Kalendar
                                             </span>
                                         </a>
-                                        <a href="https://sains1-bpti.kemdikbud.go.id/user/files.php" class="dropdown-item menu-action" role="menuitem" data-title="privatefiles,moodle" tabindex="-1" aria-labelledby="actionmenuaction-4">
+                                        <a onclick="" class="dropdown-item menu-action" role="menuitem" data-title="privatefiles,moodle" tabindex="-1" aria-labelledby="actionmenuaction-4">
                                             <span class="menu-action-text" id="actionmenuaction-4">
-                                                Private files
+                                                Berkas pribadi
                                             </span>
                                         </a>
-                                        <a href="https://sains1-bpti.kemdikbud.go.id/reportbuilder/index.php" class="dropdown-item menu-action" role="menuitem" data-title="reports,core_reportbuilder" tabindex="-1" aria-labelledby="actionmenuaction-5">
+                                        <a onclick="window.location.replace('kontak')" class="dropdown-item menu-action" role="menuitem" data-title="reports,core_reportbuilder" tabindex="-1" aria-labelledby="actionmenuaction-5">
                                             <span class="menu-action-text" id="actionmenuaction-5">
-                                                Reports
+                                                Laporan
                                             </span>
                                         </a>
                                         <div class="dropdown-divider" role="presentation"><span class="filler">&nbsp;</span></div>
-                                        <a href="https://sains1-bpti.kemdikbud.go.id/user/preferences.php" class="dropdown-item menu-action" role="menuitem" data-title="preferences,moodle" tabindex="-1" aria-labelledby="actionmenuaction-6">
-                                            <span class="menu-action-text" id="actionmenuaction-6">
-                                                Preferences
-                                            </span>
-                                        </a>
-                                        <div class="dropdown-divider" role="presentation"><span class="filler">&nbsp;</span></div>
-                                        <a href="https://sains1-bpti.kemdikbud.go.id/login/logout.php?sesskey=rFTU8g60No" class="dropdown-item menu-action" role="menuitem" data-title="logout,moodle" tabindex="-1" aria-labelledby="actionmenuaction-7">
+                                        <a onclick="window.location.replace('keluar')" class="dropdown-item menu-action" role="menuitem" data-title="logout,moodle" tabindex="-1" aria-labelledby="actionmenuaction-7">
                                             <span class="menu-action-text" id="actionmenuaction-7">
-                                                Log out
+                                                Keluar
                                             </span>
                                         </a>
                             </div>
@@ -257,7 +251,7 @@
 							<section class="node_category card d-inline-block w-100 mb-3">
 							<div class="card-body"><h3 class="lead">Laporan</h3>
 							<ul>
-								<li><span><a href="./kontak.html">Hubungi Kami</a></span></li>
+								<li><span><a onclick="window.location.replace('kontak')">Hubungi Kami</a></span></li>
 								<!--<li><span><a href="https://sains1-bpti.kemdikbud.go.id/grade/report/overview/index.php?userid=9398&amp;id=1">Grades overview</a></span></li>-->
 							</ul>
 							</div>
@@ -326,11 +320,21 @@
 	</footer>
 </div>
 
+<style>
+.usermenu,
+.menu-action-text {
+	cursor: pointer;
+}
+</style>
 
+<script>
+$(document).ready(function() {
+	$('.usermenu').click(function() {
+		$('#action-menu-0-menu').toggle();
+	});
 
+});
+</script>
 
-
-
-
-
-</body></html>
+</body>
+</html>
