--- a/keluar.html
+++ b/keluar.html
@@ -112,7 +112,7 @@ $(document).ready(function() {
 	
 	$('#keluar').click(function() {
 		Cookies.remove('user');
-		window.location.replace('https://r26ast.github.io/osn/')
+		window.location.replace('')
 	});
 
 });
