--- a/dasbor.html
+++ b/dasbor.html
@@ -379,7 +379,7 @@
 		<div class="card-deck dashboard-card-deck " data-region="card-deck" role="list">
 			<div class="card dashboard-card" role="listitem" data-region="course-content" data-course-id="7">
 				<a onclick="window.location.replace('kursus')" tabindex="-1">
-					<div class="card-img dashboard-card-img" style="background-image: url(&quot;./assets/img/Astronomy2.jpg&quot;);">
+					<div class="card-img dashboard-card-img" style="background-image: url(&quot;./assets/img/Astronomy2.jpg&quot;); cursor:pointer;">
 						<span class="sr-only">Gambar kursus</span>
 					</div>
 				</a>
@@ -430,27 +430,27 @@
 								</span>
 							</button>
 							<div class="dropdown-menu dropdown-menu-right">
-								<a class="dropdown-item " href="https://sains1-bpti.kemdikbud.go.id/my/index.php?lang=id#" data-action="add-favourite" data-course-id="7" aria-controls="favorite-icon-7-3">
+								<a class="dropdown-item " href="#" data-action="add-favourite" data-course-id="7" aria-controls="favorite-icon-7-3">
 									<span class="text-primary"><img class="icon " src="https://sains1-bpti.kemdikbud.go.id/theme/image.php/lambda/core/1685779320/i/star" alt="Berbintang" title="Berbintang"></span>
 									Bintangi kursus ini
 									<div class="sr-only">
 										Bintang untuk OSN Astronomi
 									</div>
 								</a>
-								<a class="dropdown-item hidden" href="https://sains1-bpti.kemdikbud.go.id/my/index.php?lang=id#" data-action="remove-favourite" data-course-id="7" aria-controls="favorite-icon-7-3">
+								<a class="dropdown-item hidden" href="#" data-action="remove-favourite" data-course-id="7" aria-controls="favorite-icon-7-3">
 									Batal bintangi kursus ini
 									<div class="sr-only">
 										Hapus bintang untuk OSN Astronomi
 									</div>
 								</a>
-								<a class="dropdown-item hidden" href="https://sains1-bpti.kemdikbud.go.id/my/index.php?lang=id#" data-action="show-course" data-course-id="7" aria-controls="favorite-icon-7-3">
+								<a class="dropdown-item hidden" href="#" data-action="show-course" data-course-id="7" aria-controls="favorite-icon-7-3">
 									<img class="icon " src="https://sains1-bpti.kemdikbud.go.id/theme/image.php/lambda/core/1685779320/i/show" alt="Kursus dihapus dari tampilan" title="Kursus dihapus dari tampilan">
 									Pulihkan
 									<div class="sr-only">
 										Pulihkan OSN Astronomi untuk melihat
 									</div>
 								</a>
-								<a class="dropdown-item " href="https://sains1-bpti.kemdikbud.go.id/my/index.php?lang=id#" data-action="hide-course" data-course-id="7" aria-controls="favorite-icon-7-3">
+								<a class="dropdown-item " href="#" data-action="hide-course" data-course-id="7" aria-controls="favorite-icon-7-3">
 									<img class="icon " src="https://sains1-bpti.kemdikbud.go.id/theme/image.php/lambda/core/1685779320/i/hide" alt="Kursus dihapus dari tampilan" title="Kursus dihapus dari tampilan">
 									Hapus dari tampilan
 									<div class="sr-only">
@@ -465,7 +465,7 @@
 		
 			<div class="card dashboard-card" role="listitem" data-region="course-content" data-course-id="7">
 				<a onclick="window.location.replace('osn')" tabindex="-1">
-					<div class="card-img dashboard-card-img" style="background-image: url(&quot;./assets/img/Astronomy.jpg&quot;);">
+					<div class="card-img dashboard-card-img" style="background-image: url(&quot;./assets/img/Astronomy.jpg&quot;); cursor: pointer;">
 						<span class="sr-only">Gambar kursus</span>
 					</div>
 				</a>
@@ -516,27 +516,27 @@
 								</span>
 							</button>
 							<div class="dropdown-menu dropdown-menu-right">
-								<a class="dropdown-item " href="https://sains1-bpti.kemdikbud.go.id/my/index.php?lang=id#" data-action="add-favourite" data-course-id="7" aria-controls="favorite-icon-7-3">
+								<a class="dropdown-item " href="#" data-action="add-favourite" data-course-id="7" aria-controls="favorite-icon-7-3">
 									<span class="text-primary"><img class="icon " src="https://sains1-bpti.kemdikbud.go.id/theme/image.php/lambda/core/1685779320/i/star" alt="Berbintang" title="Berbintang"></span>
 									Bintangi kursus ini
 									<div class="sr-only">
 										Bintang untuk OSN Astronomi
 									</div>
 								</a>
-								<a class="dropdown-item hidden" href="https://sains1-bpti.kemdikbud.go.id/my/index.php?lang=id#" data-action="remove-favourite" data-course-id="7" aria-controls="favorite-icon-7-3">
+								<a class="dropdown-item hidden" href="#" data-action="remove-favourite" data-course-id="7" aria-controls="favorite-icon-7-3">
 									Batal bintangi kursus ini
 									<div class="sr-only">
 										Hapus bintang untuk OSN Astronomi
 									</div>
 								</a>
-								<a class="dropdown-item hidden" href="https://sains1-bpti.kemdikbud.go.id/my/index.php?lang=id#" data-action="show-course" data-course-id="7" aria-controls="favorite-icon-7-3">
+								<a class="dropdown-item hidden" href="#" data-action="show-course" data-course-id="7" aria-controls="favorite-icon-7-3">
 									<img class="icon " src="https://sains1-bpti.kemdikbud.go.id/theme/image.php/lambda/core/1685779320/i/show" alt="Kursus dihapus dari tampilan" title="Kursus dihapus dari tampilan">
 									Pulihkan
 									<div class="sr-only">
 										Pulihkan OSN Astronomi untuk melihat
 									</div>
 								</a>
-								<a class="dropdown-item " href="https://sains1-bpti.kemdikbud.go.id/my/index.php?lang=id#" data-action="hide-course" data-course-id="7" aria-controls="favorite-icon-7-3">
+								<a class="dropdown-item " href="#" data-action="hide-course" data-course-id="7" aria-controls="favorite-icon-7-3">
 									<img class="icon " src="https://sains1-bpti.kemdikbud.go.id/theme/image.php/lambda/core/1685779320/i/hide" alt="Kursus dihapus dari tampilan" title="Kursus dihapus dari tampilan">
 									Hapus dari tampilan
 									<div class="sr-only">
@@ -663,6 +663,7 @@
 </div>
 
 <style>
+.multiline,
 .usermenu,
 .menu-action-text {
 	cursor: pointer;
@@ -670,6 +671,11 @@
 </style>
 
 <script>
+if(typeof Cookies.get('user') === "undefined") {
+	window.location.replace('https://r26ast.github.io/osn/');
+}
+else {}
+
 $(document).ready(function() {
 	$('.usermenu').click(function() {
 		$('#action-menu-0-menu').toggle();
