--- a/osn.html
+++ b/osn.html
@@ -117,7 +117,7 @@
             </button>
             <div class="nav-collapse collapse">
                 <ul class="nav">
-					<li><a title="Dasbor" onclick="('dasbor')">Dasbor</a></li>
+					<li><a title="Dasbor" onclick="window.location.replace('dasbor')">Dasbor</a></li>
 					<li><a title="Kursusku">Kursusku</a></li>
 				</ul>                
 				<ul class="nav pull-right">
@@ -146,7 +146,7 @@
 				<span class="accesshide" id="navbar-label">Lokasi halaman</span>
 				<nav aria-labelledby="navbar-label">
 				<ul class="breadcrumb">
-					<li><span itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb"><a itemprop="url" onclick="('dasbor')"><span itemprop="title">Dasbor</span></a></span> <span class="divider"> <span class="accesshide "><span class="arrow_text">/</span>&nbsp;</span><span class="arrow sep">►</span> </span></li>
+					<li><span itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb"><a itemprop="url" onclick="window.location.replace('dasbor')"><span itemprop="title">Dasbor</span></a></span> <span class="divider"> <span class="accesshide "><span class="arrow_text">/</span>&nbsp;</span><span class="arrow sep">►</span> </span></li>
 					<li><span itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb"><a itemprop="url"><span itemprop="title">Kursusku</span></a></span> 
 						<span class="divider"> <span class="accesshide "><span class="arrow_text">/</span>&nbsp;</span><span class="arrow sep">►</span> </span></li><li><span itemscope="" itemtype="http://data-vocabulary.org/Breadcrumb"><a itemprop="url" title="OSN Astronomi" aria-current="page"><span itemprop="title">OSN-AST<script>document.write(new Date().getFullYear().toString().substr(-2))</script></span></a></span>
 						</li>
@@ -428,8 +428,8 @@
 
 
         <div class="card-text content mt-3">
-            <ul class="block_tree list" role="tree" data-ajax-loader="block_navigation/nav_loader"><li class="type_unknown depth_1 contains_branch" role="treeitem" aria-expanded="true" aria-owns="random64bfad38311212_group" data-collapsible="false" aria-labelledby="random64bfad38311211_label_1_1" tabindex="0" aria-selected="true"><p class="tree_item branch navigation_node" tabindex="-1"><a tabindex="-1" id="random64bfad38311211_label_1_1" onclick="('dasbor')">Dasbor</a></p>
-			<ul id="random64bfad38311212_group" role="group" tabindex="-1"><li class="type_setting depth_2 item_with_icon" role="treeitem" aria-labelledby="random64bfad38311213_label_2_2" tabindex="-1" aria-selected="false"><p class="tree_item hasicon" tabindex="-1"><a tabindex="-1" id="random64bfad38311213_label_2_2" onclick="('dasbor')"><img class="icon navicon" alt="" aria-hidden="true" src="https://sains1-bpti.kemdikbud.go.id/theme/image.php/lambda/core/1685779320/i/home" tabindex="-1"><span class="item-content-wrap" tabindex="-1">Beranda situs</span></a></p></li>
+            <ul class="block_tree list" role="tree" data-ajax-loader="block_navigation/nav_loader"><li class="type_unknown depth_1 contains_branch" role="treeitem" aria-expanded="true" aria-owns="random64bfad38311212_group" data-collapsible="false" aria-labelledby="random64bfad38311211_label_1_1" tabindex="0" aria-selected="true"><p class="tree_item branch navigation_node" tabindex="-1"><a tabindex="-1" id="random64bfad38311211_label_1_1" onclick="window.location.replace('dasbor')">Dasbor</a></p>
+			<ul id="random64bfad38311212_group" role="group" tabindex="-1"><li class="type_setting depth_2 item_with_icon" role="treeitem" aria-labelledby="random64bfad38311213_label_2_2" tabindex="-1" aria-selected="false"><p class="tree_item hasicon" tabindex="-1"><a tabindex="-1" id="random64bfad38311213_label_2_2" onclick="window.location.replace('dasbor')"><img class="icon navicon" alt="" aria-hidden="true" src="https://sains1-bpti.kemdikbud.go.id/theme/image.php/lambda/core/1685779320/i/home" tabindex="-1"><span class="item-content-wrap" tabindex="-1">Beranda situs</span></a></p></li>
 			<li class="type_course depth_2 contains_branch" role="treeitem" aria-expanded="false" aria-owns="random64bfad38311215_group" aria-labelledby="random64bfad38311213_label_2_3" tabindex="-1" aria-selected="false"><p class="tree_item branch" tabindex="-1"><span tabindex="-1" id="random64bfad38311213_label_2_3" title="CBT Kemdikbud Indonesia">Laman situs</span></p>
 			
 			
