--- a/profil.html
+++ b/profil.html
@@ -104,7 +104,7 @@
 
         </div>
 
-</div></div><span class="userinitials size-80">AA</span></div>
+</div></div><span class="userinitials size-80"><i class="fa fa-user" aria-hidden="true"></i></span></div>
 						</div>
 					</div>
 
