--- a/dasbor.html
+++ b/dasbor.html
@@ -113,7 +113,7 @@
 
         </div>
 
-</div></div><a onclick="window.location.replace('profil.html')" class="d-inline-block aabtn"><span class="userinitials size-80">AA</span></a></div>
+</div></div><a onclick="window.location.replace('profil.html')" class="d-inline-block aabtn"><span class="userinitials size-80"><i class="fa fa-user" aria-hidden="true"></i></span></a></div>
 						</div>
 					</div>
 
