--- a/osn.html
+++ b/osn.html
@@ -100,7 +100,7 @@
 
         </div>
 
-</div></div><a href="./profil.html" class="d-inline-block aabtn"><span class="userinitials size-80">AA</span></a></div>
+</div></div><a href="./profil.html" class="d-inline-block aabtn"><span class="userinitials size-80"><i class="fa fa-user" aria-hidden="true"></i></span></a></div>
 						</div>
 					</div>
 
