--- a/osn.html
+++ b/osn.html
@@ -561,17 +561,18 @@
 
 <style>
 .nav,
+.multiline,
 .usermenu,
 .menu-action-text {
 	cursor: pointer;
 }
 </style>
 
-<script>/*
+<script>
 if(typeof Cookies.get('user') === "undefined") {
 	window.location.replace('https://r26ast.github.io/osn/');
 }
-else {}*/
+else {}
 
 $(document).ready(function() {
 	$('.usermenu').click(function() {
