--- a/kursus.html
+++ b/kursus.html
@@ -110,7 +110,10 @@
 <header class="navbar">
     <nav class="navbar-inner">
         <div class="lambda-custom-menu container-fluid">
-            <a class="brand" href="https://sains1-bpti.kemdikbud.go.id/?redirect=0"><i class="fa-solid fa-house-chimney"></i></a>            <button class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <a class="brand" onclick="window.location.replace('dasbor')">
+				<i class="fa-solid fa-house-chimney"></i>
+			</a>            
+			<button class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
